[gd_scene load_steps=13 format=2]

[ext_resource path="res://Play/Match.tscn" type="PackedScene" id=1]
[ext_resource path="res://Play/MatchContainer.gd" type="Script" id=2]
[ext_resource path="res://fonts/Graduate-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://fade_in/FadeIn.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=4]
size = 25
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=7]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=8]
size = 30
font_data = ExtResource( 3 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 6.10352e-05
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1280.0
margin_bottom = 70.0
rect_min_size = Vector2( 0, 70 )

[node name="your_score_lbl" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_top = 20.0
margin_right = 310.0
margin_bottom = 49.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.0862745, 0.317647, 0.933333, 1 )
text = "Your Score"
align = 2
valign = 1

[node name="HSplitContainer" type="HSplitContainer" parent="VBoxContainer/HBoxContainer2"]
margin_left = 314.0
margin_right = 324.0
margin_bottom = 70.0
rect_min_size = Vector2( 10, 0 )

[node name="your_score" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_left = 328.0
margin_top = 20.0
margin_right = 638.0
margin_bottom = 49.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.145098, 0.666667, 0.0980392, 1 )
text = "0"
valign = 1

[node name="opponent_score_lbl" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_left = 642.0
margin_top = 20.0
margin_right = 952.0
margin_bottom = 49.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 0.0588235, 0.0588235, 1 )
text = "Opponent Score"
align = 2
valign = 1

[node name="HSplitContainer2" type="HSplitContainer" parent="VBoxContainer/HBoxContainer2"]
margin_left = 956.0
margin_right = 966.0
margin_bottom = 70.0
rect_min_size = Vector2( 10, 0 )

[node name="opponent_score" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_left = 970.0
margin_top = 20.0
margin_right = 1280.0
margin_bottom = 49.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.145098, 0.666667, 0.0980392, 1 )
text = "0"
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 74.0
margin_right = 1280.0
margin_bottom = 616.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Match" parent="VBoxContainer/HBoxContainer" instance=ExtResource( 1 )]
margin_right = 0.0
margin_bottom = 542.0

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 620.0
margin_right = 1280.0
margin_bottom = 720.0
rect_min_size = Vector2( 0, 100 )

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer3"]
margin_right = 1280.0
margin_bottom = 100.0
size_flags_horizontal = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/HBoxContainer3/VBoxContainer"]
margin_right = 1280.0
margin_bottom = 48.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="player_with_ball_lbl" type="Label" parent="VBoxContainer/HBoxContainer3/VBoxContainer/HBoxContainer2" groups=[
"player_ball",
]]
margin_top = 12.0
margin_right = 631.0
margin_bottom = 36.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "Player with ball:"
align = 2

[node name="HSplitContainer3" type="HSplitContainer" parent="VBoxContainer/HBoxContainer3/VBoxContainer/HBoxContainer2" groups=[
"player_ball",
]]
margin_left = 635.0
margin_right = 645.0
margin_bottom = 48.0
rect_min_size = Vector2( 10, 0 )

[node name="player_with_ball" type="Label" parent="VBoxContainer/HBoxContainer3/VBoxContainer/HBoxContainer2" groups=[
"player_ball",
]]
margin_left = 649.0
margin_top = 12.0
margin_right = 1280.0
margin_bottom = 36.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )

[node name="but_for_you" type="Label" parent="VBoxContainer/HBoxContainer3/VBoxContainer/HBoxContainer2"]
visible = false
margin_left = 351.0
margin_top = 6.0
margin_right = 929.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.0862745, 0.317647, 0.933333, 1 )
text = "BUUUUUUUUUUUUT FOR YOUR TEAM !"

[node name="but_for_opponent" type="Label" parent="VBoxContainer/HBoxContainer3/VBoxContainer/HBoxContainer2"]
visible = false
margin_left = 354.0
margin_top = 6.0
margin_right = 926.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 1, 0.0588235, 0.0588235, 1 )
text = "BUUUUUUUUUUUUT FOR OPPONENT !!"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer3/VBoxContainer"]
margin_top = 52.0
margin_right = 1280.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="timelbl" type="Label" parent="VBoxContainer/HBoxContainer3/VBoxContainer/HBoxContainer"]
margin_top = 6.0
margin_right = 631.0
margin_bottom = 41.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
text = "TIME"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSplitContainer4" type="HSplitContainer" parent="VBoxContainer/HBoxContainer3/VBoxContainer/HBoxContainer"]
margin_left = 635.0
margin_right = 645.0
margin_bottom = 48.0
rect_min_size = Vector2( 10, 0 )

[node name="time" type="Label" parent="VBoxContainer/HBoxContainer3/VBoxContainer/HBoxContainer"]
margin_left = 649.0
margin_top = 6.0
margin_right = 1280.0
margin_bottom = 41.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.121569, 0.784314, 0.243137, 1 )
text = "0"
valign = 1

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="Panel" type="Panel" parent="."]
visible = false
margin_left = 470.0
margin_top = 215.0
margin_right = 819.0
margin_bottom = 414.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
margin_right = 350.0
margin_bottom = 200.0
rect_clip_content = true
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/HBoxContainer"]
margin_right = 349.0
margin_bottom = 199.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="VSplitContainer3" type="VSplitContainer" parent="Panel/HBoxContainer/VBoxContainer"]
margin_right = 349.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/HBoxContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 349.0
margin_bottom = 85.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="win" type="Label" parent="Panel/HBoxContainer/VBoxContainer/HBoxContainer2"]
visible = false
margin_left = 96.0
margin_top = 13.0
margin_right = 253.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0, 1, 0.32549, 1 )
text = "YOU WIN !"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lose" type="Label" parent="Panel/HBoxContainer/VBoxContainer/HBoxContainer2"]
visible = false
margin_left = 176.0
margin_top = 23.0
margin_right = 244.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "YOU LOSE !"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="null" type="Label" parent="Panel/HBoxContainer/VBoxContainer/HBoxContainer2"]
visible = false
margin_left = 66.0
margin_top = 13.0
margin_right = 283.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0.101961, 0, 1, 1 )
text = "MATCH NULL !"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSplitContainer2" type="VSplitContainer" parent="Panel/HBoxContainer/VBoxContainer"]
margin_top = 89.0
margin_right = 349.0
margin_bottom = 109.0
rect_min_size = Vector2( 0, 20 )

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/HBoxContainer/VBoxContainer"]
margin_top = 113.0
margin_right = 349.0
margin_bottom = 175.0
rect_min_size = Vector2( 0, 10 )
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="quitbtn" type="Button" parent="Panel/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 114.0
margin_right = 234.0
margin_bottom = 62.0
rect_min_size = Vector2( 120, 0 )
text = "QUIT"

[node name="VSplitContainer" type="VSplitContainer" parent="Panel/HBoxContainer/VBoxContainer"]
margin_top = 179.0
margin_right = 349.0
margin_bottom = 199.0
rect_min_size = Vector2( 0, 20 )

[node name="FadeIn" parent="." instance=ExtResource( 4 )]
visible = false
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="pressed" from="Panel/HBoxContainer/VBoxContainer/HBoxContainer/quitbtn" to="." method="_on_quitbtn_pressed"]
[connection signal="fade_finished" from="FadeIn" to="." method="_on_FadeIn_fade_finished"]
